@@ -1,5 +1,6 @@
 qgvdial (__QGVDIAL_VERSION__) unstable; urgency=low
 
-  * Fix inbox parsing to be robust across qt4 and qt5
+  * Parse out login error message
+  * Prevent blank username
 
  -- Yuvraaj <yuvraaj@gmail.com>  __CHANGELOG_DATETIME__ -0700
